crates/hwpx/tests/snapshots/header_tests__border_fill_tests__border_fill_3d_shadow.snap
---
source: crates/hwpx/tests/header_tests.rs
expression: bf
---
"@id": 2
"@threeD": true
"@shadow": true
"@breakCellSeparateLine": false
