crates/hwpx/tests/snapshots/header_tests__border_fill_tests__border_fill_center_line.snap
---
source: crates/hwpx/tests/header_tests.rs
expression: bf
---
"@id": 3
"@threeD": false
"@shadow": false
"@centerLine": CROSS
"@breakCellSeparateLine": true
