crates/hwpx/tests/snapshots/header_tests__border_fill_tests__border_fill_minimal.snap
---
source: crates/hwpx/tests/header_tests.rs
expression: bf
---
"@id": 1
"@threeD": false
"@shadow": false
"@breakCellSeparateLine": false
