crates/hwpx/tests/snapshots/header_tests__border_fill_tests__border_fill_with_borders.snap
---
source: crates/hwpx/tests/header_tests.rs
expression: bf
---
leftBorder:
  "@type": SOLID
  "@width": 0.12 mm
  "@color": "#000000"
rightBorder:
  "@type": SOLID
  "@width": 0.12 mm
  "@color": "#000000"
topBorder:
  "@type": SOLID
  "@width": 0.12 mm
  "@color": "#000000"
bottomBorder:
  "@type": SOLID
  "@width": 0.12 mm
  "@color": "#000000"
"@id": 4
"@threeD": false
"@shadow": false
"@breakCellSeparateLine": false
