crates/hwpx/tests/snapshots/header_tests__border_fill_tests__border_fill_with_diagonal.snap
---
source: crates/hwpx/tests/header_tests.rs
expression: bf
---
diagonal:
  "@type": DASH
  "@width": 0.4 mm
  "@color": "#FF0000"
"@id": 6
"@threeD": false
"@shadow": false
"@breakCellSeparateLine": false
