crates/hwpx/tests/snapshots/header_tests__border_fill_tests__border_fill_with_slash.snap
---
source: crates/hwpx/tests/header_tests.rs
expression: bf
---
slash:
  "@type": CENTER
  "@Crooked": false
  "@isCounter": false
backSlash:
  "@type": CENTER
  "@Crooked": false
  "@isCounter": true
"@id": 5
"@threeD": false
"@shadow": false
"@breakCellSeparateLine": false
